9.2.2 no GCV